--- a/mebel/package.json
+++ b/mebel/package.json
@@ -1,31 +1,17 @@
 {
   "name": "mebel",
   "version": "1.0.0",
-  "description": "This template should help get you started developing with Vue 3 in Vite.",
-  "main": "vite.config.js",
   "dependencies": {
-    "csstype": "^3.1.3",
-    "entities": "^4.5.0",
-    "esbuild": "^0.18.20",
-    "estree-walker": "^2.0.2",
-    "magic-string": "^0.30.17",
-    "nanoid": "^3.3.11",
-    "picocolors": "^1.1.1",
-    "postcss": "^8.5.3",
-    "rollup": "^3.29.5",
-    "source-map-js": "^1.2.1",
-    "vue": "^3.5.15"
+    "vue": "^3.5.15",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.4",
-    "vite": "^5.4.19"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "vite": "^4.5.14"
   },
   "scripts": {
     "dev": "vite",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+    "build": "vite build",
+    "serve": "vite preview"
+  }
 }
